frontend/flexbison/MiniC.output
Grammar

    0 $accept: CompileUnit $end

    1 CompileUnit: FuncDef
    2            | VarDecl
    3            | CompileUnit FuncDef
    4            | CompileUnit VarDecl

    5 FuncDef: BasicType T_ID T_L_PAREN FormalParamListOpt T_R_PAREN Block

    6 FormalParamListOpt: ε
    7                   | FormalParamList
    8                   | T_VOID

    9 FormalParamList: FormalParamDecl
   10                | FormalParamList T_COMMA FormalParamDecl

   11 FormalParamDecl: BasicType T_ID

   12 Block: T_L_BRACE T_R_BRACE
   13      | T_L_BRACE BlockItemList T_R_BRACE

   14 BlockItemList: BlockItem
   15              | BlockItemList BlockItem

   16 BlockItem: Statement
   17          | VarDecl

   18 VarDecl: VarDeclExpr T_SEMICOLON

   19 VarDeclExpr: BasicType VarDef
   20            | VarDeclExpr T_COMMA VarDef

   21 VarDef: T_ID
   22       | T_ID T_ASSIGN Expr

   23 BasicType: T_INT

   24 Statement: T_RETURN Expr T_SEMICOLON
   25          | Block
   26          | IfStmt
   27          | WhileStmt
   28          | BreakStmt
   29          | ContinueStmt
   30          | Expr T_SEMICOLON
   31          | T_SEMICOLON

   32 IfStmt: T_IF T_L_PAREN Expr T_R_PAREN Statement
   33       | T_IF T_L_PAREN Expr T_R_PAREN Statement T_ELSE Statement

   34 WhileStmt: T_WHILE T_L_PAREN Expr T_R_PAREN Statement

   35 BreakStmt: T_BREAK T_SEMICOLON

   36 ContinueStmt: T_CONTINUE T_SEMICOLON

   37 Expr: AssignExpr

   38 AssignExpr: LVal T_ASSIGN AssignExpr
   39           | LOrExp

   40 LOrExp: LOrExp T_LOR LAndExp
   41       | LAndExp

   42 LAndExp: LAndExp T_LAND EqExp
   43        | EqExp

   44 EqExp: EqExp EqOp RelExp
   45      | RelExp

   46 EqOp: T_EQ
   47     | T_NE

   48 RelExp: RelExp RelOp AddExp
   49       | AddExp

   50 RelOp: T_LT
   51      | T_LE
   52      | T_GT
   53      | T_GE

   54 AddExp: AddExp AddOp MulExp
   55       | MulExp

   56 MulExp: MulExp MulOp UnaryExp
   57       | UnaryExp

   58 AddOp: T_ADD
   59      | T_SUB

   60 MulOp: T_MUL
   61      | T_DIV
   62      | T_MOD

   63 UnaryExp: PrimaryExp
   64         | T_SUB UnaryExp
   65         | T_LNOT UnaryExp
   66         | T_ID T_L_PAREN T_R_PAREN
   67         | T_ID T_L_PAREN RealParamList T_R_PAREN

   68 PrimaryExp: T_L_PAREN Expr T_R_PAREN
   69           | T_DIGIT
   70           | LVal

   71 RealParamList: Expr
   72              | RealParamList T_COMMA Expr

   73 LVal: T_ID


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    UNARY_MINUS (258)
    T_IFX (259)
    T_DIGIT <integer_num> (260) 69
    T_ID <var_id> (261) 5 11 21 22 66 67 73
    T_INT <type> (262) 23
    T_VOID <type> (263) 8
    T_RETURN (264) 24
    T_SEMICOLON (265) 18 24 30 31 35 36
    T_L_PAREN (266) 5 32 33 34 66 67 68
    T_R_PAREN (267) 5 32 33 34 66 67 68
    T_L_BRACE (268) 12 13
    T_R_BRACE (269) 12 13
    T_COMMA (270) 10 20 72
    T_LT (271) 50
    T_LE (272) 51
    T_GT (273) 52
    T_GE (274) 53
    T_EQ (275) 46
    T_NE (276) 47
    T_LAND (277) 42
    T_LOR (278) 40
    T_LNOT (279) 65
    T_IF (280) 32 33
    T_ELSE (281) 33
    T_WHILE (282) 34
    T_BREAK (283) 35
    T_CONTINUE (284) 36
    T_ASSIGN (285) 22 38
    T_SUB (286) 59 64
    T_ADD (287) 58
    T_MUL (288) 60
    T_DIV (289) 61
    T_MOD (290) 62


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    CompileUnit <node> (37)
        on left: 1 2 3 4
        on right: 0 3 4
    FuncDef <node> (38)
        on left: 5
        on right: 1 3
    FormalParamListOpt <node> (39)
        on left: 6 7 8
        on right: 5
    FormalParamList <node> (40)
        on left: 9 10
        on right: 7 10
    FormalParamDecl <node> (41)
        on left: 11
        on right: 9 10
    Block <node> (42)
        on left: 12 13
        on right: 5 25
    BlockItemList <node> (43)
        on left: 14 15
        on right: 13 15
    BlockItem <node> (44)
        on left: 16 17
        on right: 14 15
    VarDecl <node> (45)
        on left: 18
        on right: 2 4 17
    VarDeclExpr <node> (46)
        on left: 19 20
        on right: 18 20
    VarDef <node> (47)
        on left: 21 22
        on right: 19 20
    BasicType <type> (48)
        on left: 23
        on right: 5 11 19
    Statement <node> (49)
        on left: 24 25 26 27 28 29 30 31
        on right: 16 32 33 34
    IfStmt <node> (50)
        on left: 32 33
        on right: 26
    WhileStmt <node> (51)
        on left: 34
        on right: 27
    BreakStmt <node> (52)
        on left: 35
        on right: 28
    ContinueStmt <node> (53)
        on left: 36
        on right: 29
    Expr <node> (54)
        on left: 37
        on right: 22 24 30 32 33 34 68 71 72
    AssignExpr <node> (55)
        on left: 38 39
        on right: 37 38
    LOrExp <node> (56)
        on left: 40 41
        on right: 39 40
    LAndExp <node> (57)
        on left: 42 43
        on right: 40 41 42
    EqExp <node> (58)
        on left: 44 45
        on right: 42 43 44
    EqOp <op_class> (59)
        on left: 46 47
        on right: 44
    RelExp <node> (60)
        on left: 48 49
        on right: 44 45 48
    RelOp <op_class> (61)
        on left: 50 51 52 53
        on right: 48
    AddExp <node> (62)
        on left: 54 55
        on right: 48 49 54
    MulExp <node> (63)
        on left: 56 57
        on right: 54 55 56
    AddOp <op_class> (64)
        on left: 58 59
        on right: 54
    MulOp <op_class> (65)
        on left: 60 61 62
        on right: 56
    UnaryExp <node> (66)
        on left: 63 64 65 66 67
        on right: 56 57 64 65
    PrimaryExp <node> (67)
        on left: 68 69 70
        on right: 63
    RealParamList <node> (68)
        on left: 71 72
        on right: 67 72
    LVal <node> (69)
        on left: 73
        on right: 38 70


State 0

    0 $accept: • CompileUnit $end

    T_INT  shift, and go to state 1

    CompileUnit  go to state 2
    FuncDef      go to state 3
    VarDecl      go to state 4
    VarDeclExpr  go to state 5
    BasicType    go to state 6


State 1

   23 BasicType: T_INT •

    $default  reduce using rule 23 (BasicType)


State 2

    0 $accept: CompileUnit • $end
    3 CompileUnit: CompileUnit • FuncDef
    4            | CompileUnit • VarDecl

    $end   shift, and go to state 7
    T_INT  shift, and go to state 1

    FuncDef      go to state 8
    VarDecl      go to state 9
    VarDeclExpr  go to state 5
    BasicType    go to state 6


State 3

    1 CompileUnit: FuncDef •

    $default  reduce using rule 1 (CompileUnit)


State 4

    2 CompileUnit: VarDecl •

    $default  reduce using rule 2 (CompileUnit)


State 5

   18 VarDecl: VarDeclExpr • T_SEMICOLON
   20 VarDeclExpr: VarDeclExpr • T_COMMA VarDef

    T_SEMICOLON  shift, and go to state 10
    T_COMMA      shift, and go to state 11


State 6

    5 FuncDef: BasicType • T_ID T_L_PAREN FormalParamListOpt T_R_PAREN Block
   19 VarDeclExpr: BasicType • VarDef

    T_ID  shift, and go to state 12

    VarDef  go to state 13


State 7

    0 $accept: CompileUnit $end •

    $default  accept


State 8

    3 CompileUnit: CompileUnit FuncDef •

    $default  reduce using rule 3 (CompileUnit)


State 9

    4 CompileUnit: CompileUnit VarDecl •

    $default  reduce using rule 4 (CompileUnit)


State 10

   18 VarDecl: VarDeclExpr T_SEMICOLON •

    $default  reduce using rule 18 (VarDecl)


State 11

   20 VarDeclExpr: VarDeclExpr T_COMMA • VarDef

    T_ID  shift, and go to state 14

    VarDef  go to state 15


State 12

    5 FuncDef: BasicType T_ID • T_L_PAREN FormalParamListOpt T_R_PAREN Block
   21 VarDef: T_ID •
   22       | T_ID • T_ASSIGN Expr

    T_L_PAREN  shift, and go to state 16
    T_ASSIGN   shift, and go to state 17

    $default  reduce using rule 21 (VarDef)


State 13

   19 VarDeclExpr: BasicType VarDef •

    $default  reduce using rule 19 (VarDeclExpr)


State 14

   21 VarDef: T_ID •
   22       | T_ID • T_ASSIGN Expr

    T_ASSIGN  shift, and go to state 17

    $default  reduce using rule 21 (VarDef)


State 15

   20 VarDeclExpr: VarDeclExpr T_COMMA VarDef •

    $default  reduce using rule 20 (VarDeclExpr)


State 16

    5 FuncDef: BasicType T_ID T_L_PAREN • FormalParamListOpt T_R_PAREN Block

    T_INT   shift, and go to state 1
    T_VOID  shift, and go to state 18

    $default  reduce using rule 6 (FormalParamListOpt)

    FormalParamListOpt  go to state 19
    FormalParamList     go to state 20
    FormalParamDecl     go to state 21
    BasicType           go to state 22


State 17

   22 VarDef: T_ID T_ASSIGN • Expr

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr        go to state 28
    AssignExpr  go to state 29
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 18

    8 FormalParamListOpt: T_VOID •

    $default  reduce using rule 8 (FormalParamListOpt)


State 19

    5 FuncDef: BasicType T_ID T_L_PAREN FormalParamListOpt • T_R_PAREN Block

    T_R_PAREN  shift, and go to state 39


State 20

    7 FormalParamListOpt: FormalParamList •
   10 FormalParamList: FormalParamList • T_COMMA FormalParamDecl

    T_COMMA  shift, and go to state 40

    $default  reduce using rule 7 (FormalParamListOpt)


State 21

    9 FormalParamList: FormalParamDecl •

    $default  reduce using rule 9 (FormalParamList)


State 22

   11 FormalParamDecl: BasicType • T_ID

    T_ID  shift, and go to state 41


State 23

   69 PrimaryExp: T_DIGIT •

    $default  reduce using rule 69 (PrimaryExp)


State 24

   66 UnaryExp: T_ID • T_L_PAREN T_R_PAREN
   67         | T_ID • T_L_PAREN RealParamList T_R_PAREN
   73 LVal: T_ID •

    T_L_PAREN  shift, and go to state 42

    $default  reduce using rule 73 (LVal)


State 25

   68 PrimaryExp: T_L_PAREN • Expr T_R_PAREN

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr        go to state 43
    AssignExpr  go to state 29
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 26

   65 UnaryExp: T_LNOT • UnaryExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    UnaryExp    go to state 44
    PrimaryExp  go to state 37
    LVal        go to state 45


State 27

   64 UnaryExp: T_SUB • UnaryExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    UnaryExp    go to state 46
    PrimaryExp  go to state 37
    LVal        go to state 45


State 28

   22 VarDef: T_ID T_ASSIGN Expr •

    $default  reduce using rule 22 (VarDef)


State 29

   37 Expr: AssignExpr •

    $default  reduce using rule 37 (Expr)


State 30

   39 AssignExpr: LOrExp •
   40 LOrExp: LOrExp • T_LOR LAndExp

    T_LOR  shift, and go to state 47

    $default  reduce using rule 39 (AssignExpr)


State 31

   41 LOrExp: LAndExp •
   42 LAndExp: LAndExp • T_LAND EqExp

    T_LAND  shift, and go to state 48

    $default  reduce using rule 41 (LOrExp)


State 32

   43 LAndExp: EqExp •
   44 EqExp: EqExp • EqOp RelExp

    T_EQ  shift, and go to state 49
    T_NE  shift, and go to state 50

    $default  reduce using rule 43 (LAndExp)

    EqOp  go to state 51


State 33

   45 EqExp: RelExp •
   48 RelExp: RelExp • RelOp AddExp

    T_LT  shift, and go to state 52
    T_LE  shift, and go to state 53
    T_GT  shift, and go to state 54
    T_GE  shift, and go to state 55

    $default  reduce using rule 45 (EqExp)

    RelOp  go to state 56


State 34

   49 RelExp: AddExp •
   54 AddExp: AddExp • AddOp MulExp

    T_SUB  shift, and go to state 57
    T_ADD  shift, and go to state 58

    $default  reduce using rule 49 (RelExp)

    AddOp  go to state 59


State 35

   55 AddExp: MulExp •
   56 MulExp: MulExp • MulOp UnaryExp

    T_MUL  shift, and go to state 60
    T_DIV  shift, and go to state 61
    T_MOD  shift, and go to state 62

    $default  reduce using rule 55 (AddExp)

    MulOp  go to state 63


State 36

   57 MulExp: UnaryExp •

    $default  reduce using rule 57 (MulExp)


State 37

   63 UnaryExp: PrimaryExp •

    $default  reduce using rule 63 (UnaryExp)


State 38

   38 AssignExpr: LVal • T_ASSIGN AssignExpr
   70 PrimaryExp: LVal •

    T_ASSIGN  shift, and go to state 64

    $default  reduce using rule 70 (PrimaryExp)


State 39

    5 FuncDef: BasicType T_ID T_L_PAREN FormalParamListOpt T_R_PAREN • Block

    T_L_BRACE  shift, and go to state 65

    Block  go to state 66


State 40

   10 FormalParamList: FormalParamList T_COMMA • FormalParamDecl

    T_INT  shift, and go to state 1

    FormalParamDecl  go to state 67
    BasicType        go to state 22


State 41

   11 FormalParamDecl: BasicType T_ID •

    $default  reduce using rule 11 (FormalParamDecl)


State 42

   66 UnaryExp: T_ID T_L_PAREN • T_R_PAREN
   67         | T_ID T_L_PAREN • RealParamList T_R_PAREN

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_R_PAREN  shift, and go to state 68
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr           go to state 69
    AssignExpr     go to state 29
    LOrExp         go to state 30
    LAndExp        go to state 31
    EqExp          go to state 32
    RelExp         go to state 33
    AddExp         go to state 34
    MulExp         go to state 35
    UnaryExp       go to state 36
    PrimaryExp     go to state 37
    RealParamList  go to state 70
    LVal           go to state 38


State 43

   68 PrimaryExp: T_L_PAREN Expr • T_R_PAREN

    T_R_PAREN  shift, and go to state 71


State 44

   65 UnaryExp: T_LNOT UnaryExp •

    $default  reduce using rule 65 (UnaryExp)


State 45

   70 PrimaryExp: LVal •

    $default  reduce using rule 70 (PrimaryExp)


State 46

   64 UnaryExp: T_SUB UnaryExp •

    $default  reduce using rule 64 (UnaryExp)


State 47

   40 LOrExp: LOrExp T_LOR • LAndExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    LAndExp     go to state 72
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 45


State 48

   42 LAndExp: LAndExp T_LAND • EqExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    EqExp       go to state 73
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 45


State 49

   46 EqOp: T_EQ •

    $default  reduce using rule 46 (EqOp)


State 50

   47 EqOp: T_NE •

    $default  reduce using rule 47 (EqOp)


State 51

   44 EqExp: EqExp EqOp • RelExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    RelExp      go to state 74
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 45


State 52

   50 RelOp: T_LT •

    $default  reduce using rule 50 (RelOp)


State 53

   51 RelOp: T_LE •

    $default  reduce using rule 51 (RelOp)


State 54

   52 RelOp: T_GT •

    $default  reduce using rule 52 (RelOp)


State 55

   53 RelOp: T_GE •

    $default  reduce using rule 53 (RelOp)


State 56

   48 RelExp: RelExp RelOp • AddExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    AddExp      go to state 75
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 45


State 57

   59 AddOp: T_SUB •

    $default  reduce using rule 59 (AddOp)


State 58

   58 AddOp: T_ADD •

    $default  reduce using rule 58 (AddOp)


State 59

   54 AddExp: AddExp AddOp • MulExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    MulExp      go to state 76
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 45


State 60

   60 MulOp: T_MUL •

    $default  reduce using rule 60 (MulOp)


State 61

   61 MulOp: T_DIV •

    $default  reduce using rule 61 (MulOp)


State 62

   62 MulOp: T_MOD •

    $default  reduce using rule 62 (MulOp)


State 63

   56 MulExp: MulExp MulOp • UnaryExp

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    UnaryExp    go to state 77
    PrimaryExp  go to state 37
    LVal        go to state 45


State 64

   38 AssignExpr: LVal T_ASSIGN • AssignExpr

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    AssignExpr  go to state 78
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 65

   12 Block: T_L_BRACE • T_R_BRACE
   13      | T_L_BRACE • BlockItemList T_R_BRACE

    T_DIGIT      shift, and go to state 23
    T_ID         shift, and go to state 24
    T_INT        shift, and go to state 1
    T_RETURN     shift, and go to state 79
    T_SEMICOLON  shift, and go to state 80
    T_L_PAREN    shift, and go to state 25
    T_L_BRACE    shift, and go to state 65
    T_R_BRACE    shift, and go to state 81
    T_LNOT       shift, and go to state 26
    T_IF         shift, and go to state 82
    T_WHILE      shift, and go to state 83
    T_BREAK      shift, and go to state 84
    T_CONTINUE   shift, and go to state 85
    T_SUB        shift, and go to state 27

    Block          go to state 86
    BlockItemList  go to state 87
    BlockItem      go to state 88
    VarDecl        go to state 89
    VarDeclExpr    go to state 5
    BasicType      go to state 90
    Statement      go to state 91
    IfStmt         go to state 92
    WhileStmt      go to state 93
    BreakStmt      go to state 94
    ContinueStmt   go to state 95
    Expr           go to state 96
    AssignExpr     go to state 29
    LOrExp         go to state 30
    LAndExp        go to state 31
    EqExp          go to state 32
    RelExp         go to state 33
    AddExp         go to state 34
    MulExp         go to state 35
    UnaryExp       go to state 36
    PrimaryExp     go to state 37
    LVal           go to state 38


State 66

    5 FuncDef: BasicType T_ID T_L_PAREN FormalParamListOpt T_R_PAREN Block •

    $default  reduce using rule 5 (FuncDef)


State 67

   10 FormalParamList: FormalParamList T_COMMA FormalParamDecl •

    $default  reduce using rule 10 (FormalParamList)


State 68

   66 UnaryExp: T_ID T_L_PAREN T_R_PAREN •

    $default  reduce using rule 66 (UnaryExp)


State 69

   71 RealParamList: Expr •

    $default  reduce using rule 71 (RealParamList)


State 70

   67 UnaryExp: T_ID T_L_PAREN RealParamList • T_R_PAREN
   72 RealParamList: RealParamList • T_COMMA Expr

    T_R_PAREN  shift, and go to state 97
    T_COMMA    shift, and go to state 98


State 71

   68 PrimaryExp: T_L_PAREN Expr T_R_PAREN •

    $default  reduce using rule 68 (PrimaryExp)


State 72

   40 LOrExp: LOrExp T_LOR LAndExp •
   42 LAndExp: LAndExp • T_LAND EqExp

    T_LAND  shift, and go to state 48

    $default  reduce using rule 40 (LOrExp)


State 73

   42 LAndExp: LAndExp T_LAND EqExp •
   44 EqExp: EqExp • EqOp RelExp

    T_EQ  shift, and go to state 49
    T_NE  shift, and go to state 50

    $default  reduce using rule 42 (LAndExp)

    EqOp  go to state 51


State 74

   44 EqExp: EqExp EqOp RelExp •
   48 RelExp: RelExp • RelOp AddExp

    T_LT  shift, and go to state 52
    T_LE  shift, and go to state 53
    T_GT  shift, and go to state 54
    T_GE  shift, and go to state 55

    $default  reduce using rule 44 (EqExp)

    RelOp  go to state 56


State 75

   48 RelExp: RelExp RelOp AddExp •
   54 AddExp: AddExp • AddOp MulExp

    T_SUB  shift, and go to state 57
    T_ADD  shift, and go to state 58

    $default  reduce using rule 48 (RelExp)

    AddOp  go to state 59


State 76

   54 AddExp: AddExp AddOp MulExp •
   56 MulExp: MulExp • MulOp UnaryExp

    T_MUL  shift, and go to state 60
    T_DIV  shift, and go to state 61
    T_MOD  shift, and go to state 62

    $default  reduce using rule 54 (AddExp)

    MulOp  go to state 63


State 77

   56 MulExp: MulExp MulOp UnaryExp •

    $default  reduce using rule 56 (MulExp)


State 78

   38 AssignExpr: LVal T_ASSIGN AssignExpr •

    $default  reduce using rule 38 (AssignExpr)


State 79

   24 Statement: T_RETURN • Expr T_SEMICOLON

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr        go to state 99
    AssignExpr  go to state 29
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 80

   31 Statement: T_SEMICOLON •

    $default  reduce using rule 31 (Statement)


State 81

   12 Block: T_L_BRACE T_R_BRACE •

    $default  reduce using rule 12 (Block)


State 82

   32 IfStmt: T_IF • T_L_PAREN Expr T_R_PAREN Statement
   33       | T_IF • T_L_PAREN Expr T_R_PAREN Statement T_ELSE Statement

    T_L_PAREN  shift, and go to state 100


State 83

   34 WhileStmt: T_WHILE • T_L_PAREN Expr T_R_PAREN Statement

    T_L_PAREN  shift, and go to state 101


State 84

   35 BreakStmt: T_BREAK • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 102


State 85

   36 ContinueStmt: T_CONTINUE • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 103


State 86

   25 Statement: Block •

    $default  reduce using rule 25 (Statement)


State 87

   13 Block: T_L_BRACE BlockItemList • T_R_BRACE
   15 BlockItemList: BlockItemList • BlockItem

    T_DIGIT      shift, and go to state 23
    T_ID         shift, and go to state 24
    T_INT        shift, and go to state 1
    T_RETURN     shift, and go to state 79
    T_SEMICOLON  shift, and go to state 80
    T_L_PAREN    shift, and go to state 25
    T_L_BRACE    shift, and go to state 65
    T_R_BRACE    shift, and go to state 104
    T_LNOT       shift, and go to state 26
    T_IF         shift, and go to state 82
    T_WHILE      shift, and go to state 83
    T_BREAK      shift, and go to state 84
    T_CONTINUE   shift, and go to state 85
    T_SUB        shift, and go to state 27

    Block         go to state 86
    BlockItem     go to state 105
    VarDecl       go to state 89
    VarDeclExpr   go to state 5
    BasicType     go to state 90
    Statement     go to state 91
    IfStmt        go to state 92
    WhileStmt     go to state 93
    BreakStmt     go to state 94
    ContinueStmt  go to state 95
    Expr          go to state 96
    AssignExpr    go to state 29
    LOrExp        go to state 30
    LAndExp       go to state 31
    EqExp         go to state 32
    RelExp        go to state 33
    AddExp        go to state 34
    MulExp        go to state 35
    UnaryExp      go to state 36
    PrimaryExp    go to state 37
    LVal          go to state 38


State 88

   14 BlockItemList: BlockItem •

    $default  reduce using rule 14 (BlockItemList)


State 89

   17 BlockItem: VarDecl •

    $default  reduce using rule 17 (BlockItem)


State 90

   19 VarDeclExpr: BasicType • VarDef

    T_ID  shift, and go to state 14

    VarDef  go to state 13


State 91

   16 BlockItem: Statement •

    $default  reduce using rule 16 (BlockItem)


State 92

   26 Statement: IfStmt •

    $default  reduce using rule 26 (Statement)


State 93

   27 Statement: WhileStmt •

    $default  reduce using rule 27 (Statement)


State 94

   28 Statement: BreakStmt •

    $default  reduce using rule 28 (Statement)


State 95

   29 Statement: ContinueStmt •

    $default  reduce using rule 29 (Statement)


State 96

   30 Statement: Expr • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 106


State 97

   67 UnaryExp: T_ID T_L_PAREN RealParamList T_R_PAREN •

    $default  reduce using rule 67 (UnaryExp)


State 98

   72 RealParamList: RealParamList T_COMMA • Expr

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr        go to state 107
    AssignExpr  go to state 29
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 99

   24 Statement: T_RETURN Expr • T_SEMICOLON

    T_SEMICOLON  shift, and go to state 108


State 100

   32 IfStmt: T_IF T_L_PAREN • Expr T_R_PAREN Statement
   33       | T_IF T_L_PAREN • Expr T_R_PAREN Statement T_ELSE Statement

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr        go to state 109
    AssignExpr  go to state 29
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 101

   34 WhileStmt: T_WHILE T_L_PAREN • Expr T_R_PAREN Statement

    T_DIGIT    shift, and go to state 23
    T_ID       shift, and go to state 24
    T_L_PAREN  shift, and go to state 25
    T_LNOT     shift, and go to state 26
    T_SUB      shift, and go to state 27

    Expr        go to state 110
    AssignExpr  go to state 29
    LOrExp      go to state 30
    LAndExp     go to state 31
    EqExp       go to state 32
    RelExp      go to state 33
    AddExp      go to state 34
    MulExp      go to state 35
    UnaryExp    go to state 36
    PrimaryExp  go to state 37
    LVal        go to state 38


State 102

   35 BreakStmt: T_BREAK T_SEMICOLON •

    $default  reduce using rule 35 (BreakStmt)


State 103

   36 ContinueStmt: T_CONTINUE T_SEMICOLON •

    $default  reduce using rule 36 (ContinueStmt)


State 104

   13 Block: T_L_BRACE BlockItemList T_R_BRACE •

    $default  reduce using rule 13 (Block)


State 105

   15 BlockItemList: BlockItemList BlockItem •

    $default  reduce using rule 15 (BlockItemList)


State 106

   30 Statement: Expr T_SEMICOLON •

    $default  reduce using rule 30 (Statement)


State 107

   72 RealParamList: RealParamList T_COMMA Expr •

    $default  reduce using rule 72 (RealParamList)


State 108

   24 Statement: T_RETURN Expr T_SEMICOLON •

    $default  reduce using rule 24 (Statement)


State 109

   32 IfStmt: T_IF T_L_PAREN Expr • T_R_PAREN Statement
   33       | T_IF T_L_PAREN Expr • T_R_PAREN Statement T_ELSE Statement

    T_R_PAREN  shift, and go to state 111


State 110

   34 WhileStmt: T_WHILE T_L_PAREN Expr • T_R_PAREN Statement

    T_R_PAREN  shift, and go to state 112


State 111

   32 IfStmt: T_IF T_L_PAREN Expr T_R_PAREN • Statement
   33       | T_IF T_L_PAREN Expr T_R_PAREN • Statement T_ELSE Statement

    T_DIGIT      shift, and go to state 23
    T_ID         shift, and go to state 24
    T_RETURN     shift, and go to state 79
    T_SEMICOLON  shift, and go to state 80
    T_L_PAREN    shift, and go to state 25
    T_L_BRACE    shift, and go to state 65
    T_LNOT       shift, and go to state 26
    T_IF         shift, and go to state 82
    T_WHILE      shift, and go to state 83
    T_BREAK      shift, and go to state 84
    T_CONTINUE   shift, and go to state 85
    T_SUB        shift, and go to state 27

    Block         go to state 86
    Statement     go to state 113
    IfStmt        go to state 92
    WhileStmt     go to state 93
    BreakStmt     go to state 94
    ContinueStmt  go to state 95
    Expr          go to state 96
    AssignExpr    go to state 29
    LOrExp        go to state 30
    LAndExp       go to state 31
    EqExp         go to state 32
    RelExp        go to state 33
    AddExp        go to state 34
    MulExp        go to state 35
    UnaryExp      go to state 36
    PrimaryExp    go to state 37
    LVal          go to state 38


State 112

   34 WhileStmt: T_WHILE T_L_PAREN Expr T_R_PAREN • Statement

    T_DIGIT      shift, and go to state 23
    T_ID         shift, and go to state 24
    T_RETURN     shift, and go to state 79
    T_SEMICOLON  shift, and go to state 80
    T_L_PAREN    shift, and go to state 25
    T_L_BRACE    shift, and go to state 65
    T_LNOT       shift, and go to state 26
    T_IF         shift, and go to state 82
    T_WHILE      shift, and go to state 83
    T_BREAK      shift, and go to state 84
    T_CONTINUE   shift, and go to state 85
    T_SUB        shift, and go to state 27
